# projectplayhalving

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
client/: astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
client/public/: design.css
client/public/style/: homepage.css
client/src/: AppEntry.tsx  constants.ts  types.ts  utils.ts
client/src/components/: Slider.tsx  WalletButton.tsx
client/src/context/: AppContext.tsx  ProgramContext.tsx  index.ts
client/src/pages/: index.astro
programs/play-halving/: Cargo.toml
programs/play-halving/src/: constants.rs  errors.rs  lib.rs
programs/play-halving/src/instructions/: buy_tickets.rs  claim_rewards.rs  close_program.rs  init_program.rs  mark_halving.rs  mod.rs  pause_betting.rs  place_bet.rs
programs/play-halving/src/state/: bets_state.rs  mod.rs  program_config.rs
sdk/: PDAs.ts  config.ts  loadKp.ts  utils.ts
sdk/crank/: initProgram.ts
tests/: play-halving.ts
